crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__async_readiness_reassigns_unowned_persisted_port_before_resource_readiness.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    (
        "persisted_port_reassigned",
        true,
    ),
    (
        "env_uses_occupied_port",
        false,
    ),
    "# >>> PV MANAGED\nDATABASE_URL=mysql://root:secret@127.0.0.1:<port>/project_app_db\n# <<< PV MANAGED\n",
    [
        PortAssignment {
            owner: Resource {
                name: "mysql",
                track: "8.0",
                port: "mysql",
            },
            port: <port>,
            updated_at: "<timestamp>",
        },
    ],
    [
        ResourceAllocationRecord {
            id: "allocation_000001",
            project_id: "<project_id>",
            resource_name: "mysql",
            track: "8.0",
            allocation_name: "app-db",
            generated_name: "project_app_db",
            env: {
                "database": "project_app_db",
                "host": "127.0.0.1",
                "password": "secret",
                "port": "<port>",
                "url": "mysql://root:secret@127.0.0.1:<port>/project_app_db",
                "username": "root",
            },
            status: Ready,
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
    [
        RuntimeObservedStateRecord {
            subject: Resource {
                name: "mysql",
                track: "8.0",
            },
            status: Running,
            message: Some(
                "Managed Resource runtime is ready",
            ),
            observed_at: "<timestamp>",
        },
    ],
    [
        "build_process_spec:persisted_env",
        "readiness",
        "allocation",
    ],
)
