crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__demand_change_stops_previous_runtime_when_new_runtime_readiness_fails.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    "Err(\n    ReadinessTimedOut {\n        check: \"http:127.0.0.1:<readiness_port>/__pv_unready_fixture__\",\n        timeout_ms: <timeout_ms>,\n        last_error: Some(\n            \"I/O error: readiness unavailable\",\n        ),\n    },\n)",
    "# >>> PV MANAGED\nMAILPIT_DASHBOARD=http://127.0.0.1:<dashboard_port>\nMAIL_HOST=127.0.0.1\nMAIL_PORT=<smtp_port>\n# <<< PV MANAGED\n",
    ManagedResourceTrackRecord {
        resource_name: "mailpit",
        track: "1.0",
        desired_state: Installed,
        installed_version: Some(
            "1.0.0-pv1",
        ),
        current_artifact_path: Some(
            "<tempdir>/home/.pv/resources/mailpit/1.0/releases/1.0.0-pv1",
        ),
        env: {
            "dashboard_url": "http://127.0.0.1:<dashboard_port>",
            "smtp_host": "127.0.0.1",
            "smtp_port": "<smtp_port>",
        },
        usage_count: 0,
        removal_prune: false,
        removal_force: false,
        updated_at: "<timestamp>",
    },
    ManagedResourceTrackRecord {
        resource_name: "mailpit",
        track: "1.1",
        desired_state: Installed,
        installed_version: Some(
            "1.0.0-pv1",
        ),
        current_artifact_path: Some(
            "<tempdir>/home/.pv/resources/mailpit/1.1/releases/1.0.0-pv1",
        ),
        env: {},
        usage_count: 1,
        removal_prune: false,
        removal_force: false,
        updated_at: "<timestamp>",
    },
    [
        PortAssignment {
            owner: Resource {
                name: "mailpit",
                track: "1.1",
                port: "dashboard",
            },
            port: <port>,
            updated_at: "<timestamp>",
        },
        PortAssignment {
            owner: Resource {
                name: "mailpit",
                track: "1.1",
                port: "smtp",
            },
            port: <port>,
            updated_at: "<timestamp>",
        },
    ],
    [
        RuntimeObservedStateRecord {
            subject: Resource {
                name: "mailpit",
                track: "1.0",
            },
            status: Stopped,
            message: Some(
                "Managed Resource runtime stopped; no Projects require this track",
            ),
            observed_at: "<timestamp>",
        },
        RuntimeObservedStateRecord {
            subject: Resource {
                name: "mailpit",
                track: "1.1",
            },
            status: Failed,
            message: Some(
                "readiness check `http:127.0.0.1:<readiness_port>/__pv_unready_fixture__` timed out after 100ms; last error: Some(\"I/O error: readiness unavailable\")",
            ),
            observed_at: "<timestamp>",
        },
    ],
)
