crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__demanded_removed_track_fails_without_starting_runtime.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    "Err(\n    ManagedResourceTrackRemoved {\n        resource: \"mailpit\",\n        track: \"1.0\",\n    },\n)",
    None,
    ManagedResourceTrackRecord {
        resource_name: "mailpit",
        track: "1.0",
        desired_state: Removed,
        installed_version: Some(
            "1.0.0-pv1",
        ),
        current_artifact_path: Some(
            "<tempdir>/home/.pv/resources/mailpit/1.0/releases/1.0.0-pv1",
        ),
        env: {},
        usage_count: 1,
        removal_prune: false,
        removal_force: true,
        updated_at: "<timestamp>",
    },
    [
        PortAssignment {
            owner: Resource {
                name: "mailpit",
                track: "1.0",
                port: "dashboard",
            },
            port: <port>,
            updated_at: "<timestamp>",
        },
        PortAssignment {
            owner: Resource {
                name: "mailpit",
                track: "1.0",
                port: "smtp",
            },
            port: <port>,
            updated_at: "<timestamp>",
        },
    ],
    [
        RuntimeObservedStateRecord {
            subject: Resource {
                name: "mailpit",
                track: "1.0",
            },
            status: Failed,
            message: Some(
                "Managed Resource runtime `mailpit` track `1.0` is marked removed",
            ),
            observed_at: "<timestamp>",
        },
    ],
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Failed,
            message: Some(
                "Managed Resource runtime `mailpit` track `1.0` is marked removed",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
)
