crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__demanded_resource_records_failed_runtime_when_named_port_assignment_fails.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    "Err(\n    ManagedResourcePortNameReserved {\n        resource: \"mailpit\",\n        track: \"1.0\",\n        port: \"default\",\n    },\n)",
    None,
    [],
    [
        RuntimeObservedStateRecord {
            subject: Resource {
                name: "mailpit",
                track: "1.0",
            },
            status: Failed,
            message: Some(
                "Managed Resource runtime `mailpit` track `1.0` uses reserved port name `default`",
            ),
            observed_at: "<timestamp>",
        },
    ],
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Failed,
            message: Some(
                "Managed Resource runtime `mailpit` track `1.0` uses reserved port name `default`",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
)
