crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__demanded_resource_records_failed_runtime_when_readiness_fails_before_env_rendering.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    "Err(\n    ReadinessTimedOut {\n        check: \"http:127.0.0.1:<readiness_port>/__pv_unready_fixture__\",\n        timeout_ms: <timeout_ms>,\n        last_error: Some(\n            \"I/O error: readiness unavailable\",\n        ),\n    },\n)",
    None,
    ManagedResourceTrackRecord {
        resource_name: "mailpit",
        track: "1.0",
        desired_state: Installed,
        installed_version: Some(
            "1.0.0-pv1",
        ),
        current_artifact_path: Some(
            "<tempdir>/home/.pv/resources/mailpit/1.0/releases/1.0.0-pv1",
        ),
        env: {
            "dashboard_url": "http://127.0.0.1:<dashboard_port>",
            "smtp_host": "127.0.0.1",
            "smtp_port": "<smtp_port>",
        },
        usage_count: 1,
        removal_prune: false,
        removal_force: false,
        updated_at: "<timestamp>",
    },
    [
        PortAssignment {
            owner: Resource {
                name: "mailpit",
                track: "1.0",
                port: "dashboard",
            },
            port: <port>,
            updated_at: "<timestamp>",
        },
        PortAssignment {
            owner: Resource {
                name: "mailpit",
                track: "1.0",
                port: "smtp",
            },
            port: <port>,
            updated_at: "<timestamp>",
        },
    ],
    [
        RuntimeObservedStateRecord {
            subject: Resource {
                name: "mailpit",
                track: "1.0",
            },
            status: Failed,
            message: Some(
                "readiness check `http:127.0.0.1:<readiness_port>/__pv_unready_fixture__` timed out after 100ms; last error: Some(\"I/O error: readiness unavailable\")",
            ),
            observed_at: "<timestamp>",
        },
    ],
    RuntimeFilePresence {
        metadata: false,
        config: false,
    },
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Failed,
            message: Some(
                "readiness check `http:127.0.0.1:<readiness_port>/__pv_unready_fixture__` timed out after 100ms; last error: Some(\"I/O error: readiness unavailable\")",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
)
