crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__mailpit_process_spec_uses_persistent_database_and_disables_version_check.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    [
        "--smtp",
        "127.0.0.1:<port>",
        "--listen",
        "127.0.0.1:<port>",
        "--database",
        "<tempdir>/home/.pv/resources/mailpit/1.0/data/mailpit.db",
        "--disable-version-check",
    ],
    true,
)
